@@ -13,23 +13,16 @@ end DIG_Counter;
 
 architecture DIG_Counter_arch of DIG_Counter is
    signal count : {{data}} := {{zero}};
-   signal ovf : std_logic := '0';
 begin
     process (PORT_C, PORT_clr)
     begin
       if PORT_clr='1' then
         count <= {{zero}};
-      elsif rising_edge(PORT_C) then
-        ovf <= '0';
-        if PORT_en='1' then
-          if count = ((2**bitCount)-1) then
-            ovf <= '1';
-          end if;
-          count <= count + 1;
-        end if;
+      elsif rising_edge(PORT_C) and PORT_en='1' then
+        count <= count + 1;
       end if;
     end process;
 
     PORT_out <= count;
-    PORT_ovf <= ovf;
+    PORT_ovf <= PORT_en when count = ((2**bitCount)-1) else '0';
 end DIG_Counter_arch;
