@@ -22,26 +22,28 @@ public class CounterTest extends TestCase {
         Counter out = model.add(new Counter(
                 new ElementAttributes()
                         .setBits(8)));
-        out.setInputs(ovs(clk, en, clr));
+        out.setInputs(ovs(en, clk, clr));
 
-        TestExecuter sc = new TestExecuter(model).setInputs(clk, en, clr).setOutputs(out.getOutputs());
-        sc.check(0, 1, 0, 0, 0);
+        TestExecuter sc = new TestExecuter(model).setInputs(en, clk, clr).setOutputs(out.getOutputs());
+        sc.check(1, 0, 0, 0, 0);
         sc.check(1, 1, 0, 1, 0);
-        sc.check(0, 1, 0, 1, 0);
+        sc.check(1, 0, 0, 1, 0);
         sc.check(1, 1, 0, 2, 0);
-        sc.check(0, 1, 0, 2, 0);
+        sc.check(1, 0, 0, 2, 0);
         sc.check(1, 1, 0, 3, 0);
-        sc.check(0, 1, 0, 3, 0);
-        sc.check(0, 1, 1, 0, 0);
+        sc.check(1, 0, 0, 3, 0);
+        sc.check(1, 0, 1, 0, 0);
 
-        sc.check(0, 1, 0, 0, 0);
-        for (int i = 1; i <= 255; i++) {
-            sc.check(0, 1, 0, i - 1, 0);
+        sc.check(1, 0, 0, 0, 0);
+        for (int i = 1; i <= 254; i++) {
+            sc.check(1, 0, 0, i - 1, 0);
             sc.check(1, 1, 0, i, 0);
         }
-        sc.check(0, 1, 0, 255, 0);
-        sc.check(1, 1, 0, 0, 1);
-        sc.check(0, 1, 0, 0, 1);
+        sc.check(1, 0, 0, 254, 0);
+        sc.check(1, 1, 0, 255, 1);
+        sc.check(1, 0, 0, 255, 1);
+        sc.check(1, 1, 0, 0, 0);
+        sc.check(1, 0, 0, 0, 0);
         sc.check(1, 1, 0, 1, 0);
     }
 
