@@ -6,7 +6,7 @@
     <visualElement>
       <elementName>Clock</elementName>
       <elementAttributes/>
-      <pos x="120" y="180"/>
+      <pos x="120" y="200"/>
     </visualElement>
     <visualElement>
       <elementName>Counter</elementName>
@@ -90,27 +90,18 @@
     <visualElement>
       <elementName>Not</elementName>
       <elementAttributes/>
-      <pos x="320" y="220"/>
+      <pos x="340" y="220"/>
     </visualElement>
     <visualElement>
       <elementName>Const</elementName>
       <elementAttributes/>
-      <pos x="160" y="200"/>
-    </visualElement>
-    <visualElement>
-      <elementName>Const</elementName>
-      <elementAttributes/>
-      <pos x="160" y="300"/>
+      <pos x="160" y="180"/>
     </visualElement>
   </visualElements>
   <wires>
     <wire>
       <p1 x="160" y="320"/>
       <p2 x="180" y="320"/>
-    </wire>
-    <wire>
-      <p1 x="120" y="180"/>
-      <p2 x="160" y="180"/>
     </wire>
     <wire>
       <p1 x="240" y="180"/>
@@ -129,6 +120,10 @@
       <p2 x="260" y="260"/>
     </wire>
     <wire>
+      <p1 x="120" y="200"/>
+      <p2 x="140" y="200"/>
+    </wire>
+    <wire>
       <p1 x="240" y="200"/>
       <p2 x="260" y="200"/>
     </wire>
@@ -145,7 +140,7 @@
       <p2 x="400" y="200"/>
     </wire>
     <wire>
-      <p1 x="160" y="200"/>
+      <p1 x="140" y="200"/>
       <p2 x="180" y="200"/>
     </wire>
     <wire>
@@ -161,19 +156,19 @@
       <p2 x="180" y="220"/>
     </wire>
     <wire>
-      <p1 x="360" y="220"/>
+      <p1 x="380" y="220"/>
       <p2 x="400" y="220"/>
     </wire>
     <wire>
       <p1 x="300" y="220"/>
-      <p2 x="320" y="220"/>
+      <p2 x="340" y="220"/>
     </wire>
     <wire>
       <p1 x="240" y="300"/>
       <p2 x="300" y="300"/>
     </wire>
     <wire>
-      <p1 x="160" y="300"/>
+      <p1 x="140" y="300"/>
       <p2 x="180" y="300"/>
     </wire>
     <wire>
@@ -181,16 +176,12 @@
       <p2 x="320" y="300"/>
     </wire>
     <wire>
-      <p1 x="160" y="140"/>
+      <p1 x="140" y="140"/>
       <p2 x="380" y="140"/>
     </wire>
     <wire>
       <p1 x="160" y="260"/>
       <p2 x="160" y="280"/>
-    </wire>
-    <wire>
-      <p1 x="160" y="140"/>
-      <p2 x="160" y="180"/>
     </wire>
     <wire>
       <p1 x="260" y="200"/>
@@ -199,6 +190,14 @@
     <wire>
       <p1 x="280" y="200"/>
       <p2 x="280" y="280"/>
+    </wire>
+    <wire>
+      <p1 x="140" y="140"/>
+      <p2 x="140" y="200"/>
+    </wire>
+    <wire>
+      <p1 x="140" y="200"/>
+      <p2 x="140" y="300"/>
     </wire>
     <wire>
       <p1 x="300" y="220"/>
